@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-27T16:06:12Z",
+  "timestamp" : "2022-11-28T08:08:16Z",
   "count_outdated" : 1935,
   "uniques_outdated" : 625,
-  "count" : 1977,
+  "count" : 1976,
   "uniques" : 646,
   "clones" : [
     {
       "timestamp": "2022-11-14T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
