@@ -1,10 +1,10 @@
 {
-  "count": 42,
+  "count": 41,
   "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-11-14T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
