@@ -1,3 +1,11 @@
+2022-11-28T08:08:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3562868899 # 1072
+* notice: last 14d: unq all: 9 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 625 1935 / 646 1977
+* notice: next accum: outdated-unq outdated-all / unq all: 625 1935 / 646 1976
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
+* notice: removed / changed dates: [] / [2022-11-14]
+
 2022-11-27T16:06:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3558961268 # 1070
 * notice: last 14d: unq all: 9 42
